src/objects/BMCServiceDesk__ScanConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the scan configuration has been deleted or not.</description>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanConfigurationId__c</fullName>
        <label>Scan Configuration Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanConfigurationName__c</fullName>
        <description>To store the name of the Scan Configuration.</description>
        <label>Scan Configuration Name</label>
        <type>TextArea</type>
    </fields>
    <label>Scan Configuration</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>